# helioscta-gas-frontend

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.SKILLS/: frontend-styling.md
.claude/: settings.json  settings.local.json
.github/workflows/: deploy-backend.yml
.markdowns/Mar-03/: Phase 1 Daily Reports Agent — Implementation Plan.md  TODO.md  current_issues.md  postgres_mcp.md  test_plan.md
.prompts/: Daily-Notes.md
.prompts/_templates/: pack.md
.prompts/agt_pipe_balance/: pack.md  prompt.md
.prompts/q2_genscape_prod_vs_cash_prices/: pack.md  prompt.md
.skills/: genscape_pipelines.md  refactor.md
.skills/agent-workbench/: skill-agent-workbench.md
.skills/frontend/: cache.md
.skills/genscape-noms/: historicals.md  pipeline_ebbs.md
backend/: Dockerfile  environment.yml  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/migrations/: 001_agents_schema.sql  002_conversations_messages.sql  003_workspace_tables.sql  004_analysis_packs.sql  005_seed_agt_pack.sql  006_token_cost_tracking.sql  007_folder_structure_metadata.sql  008_reseed_agt_inputs.sql  009_seed_default_agent.sql  010_watchlists.sql  011_daily_reports.sql  012_seed_report_agent.sql
backend/src/: api.py  settings.py
backend/src/utils/: azure_postgresql.py  azure_sql.py
frontend/: .dockerignore  .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  vercel.json
scripts/: setup-azure.sh  setup-blob-workspace.sh  upload-pack-to-blob.mjs  upload-sql-to-expected-paths.mjs
(+161 files in other folders)
